# poetry-example

./: .gitignore  pyproject.toml
example_package/: hello.py  manifold.py
