[tool.poetry]
name = "poetry-example"
version = "0.0.0"
description = ""
authors = ["Kaido Iwamoto <h6824.kaido@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.16"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
