[tool.poetry]
name = "poetry-example"
version = "0.0.0"
description = ""
authors = ["Kaido Iwamoto <h6824.kaido@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.16"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
ipython = "^7.5"
mypy = "^0.701.0"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
